fixed: content would not cover page on mobile

--- a/SCP Subject Files/css/css.css
+++ b/SCP Subject Files/css/css.css
@@ -1,3 +1,16 @@
+*{
+    padding: 0%;
+    margin: 0%;
+}
+
+html, body {
+    width: 100%;
+    height: auto;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 body{
     font-family: 'Cinzel', serif;
     background-color: rgb(227, 227, 227);
